--- a/core/templates/components/_footer.html
+++ b/core/templates/components/_footer.html
@@ -1,19 +1,26 @@
-<!-- footer.html -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 <footer class="bg-dark text-light py-4 mt-5">
     <div class="container text-center">
         <div class="row">
             <div class="col-md-4 mb-3 mb-md-0">
-                <h5>Fashion Store</h5>
+                <h5>Lu Fashion</h5>
                 <p>Seu destino para moda elegante e acessível.</p>
             </div>
             <div class="col-md-4 mb-3 mb-md-0">
                 <h5>Links Rápidos</h5>
-                <ul class="list-unstyled">
-                    <li><a href="{% url 'product_list' %}" class="text-decoration-none text-light">Home</a></li>
-                    <li><a href="#" class="text-decoration-none text-light">Sobre</a></li>
-                    <li><a href="#" class="text-decoration-none text-light">Contato</a></li>
+                <ul class="list-unstyled d-flex justify-content-center">
+                    <li class="mx-2">
+                        <a href="{% url 'product_list' %}" class="text-decoration-none text-light">Home</a>
+                    </li>
+                    <li class="mx-2">
+                        <a href="#" class="text-decoration-none text-light">Sobre</a>
+                    </li>
+                    <li class="mx-2">
+                        <a href="#" class="text-decoration-none text-light">Contato</a>
+                    </li>
                 </ul>
             </div>
+            
             <div class="col-md-4">
                 <h5>Redes Sociais</h5>
                 <ul class="list-unstyled d-flex justify-content-center">
@@ -37,7 +44,7 @@
         </div>
         <hr class="bg-light">
         <div class="text-center">
-            <small>&copy; 2024 Fashion Store. Todos os direitos reservados.</small>
+            <small>&copy; 2024 Lu Fashion. Todos os direitos reservados.</small>
         </div>
     </div>
 </footer>
