--- a/catalog/templates/products_list.html
+++ b/catalog/templates/products_list.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/products_list.css' %}"/>
 
-<h2>
+<h2 class="text-center my-4">
     {% if current_category %}
         {{ current_category.name }}
     {% else %}
@@ -14,14 +16,14 @@
 <div class="row">
     {% for product in products %}
     <div class="col-md-4 mb-4">
-        <div class="card">
+        <div class="card h-100 text-center">
             <a href="{% url 'product_details' product.id %}">
-                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                <img src="{{ product.image.url }}" class="card-img-top p-3" alt="{{ product.name }}">
             </a>
-            <div class="card-body">
+            <div class="card-body d-flex flex-column justify-content-between">
                 <h5 class="card-title">{{ product.name }}</h5>
-                <p class="card-text">{{ product.description|truncatewords:20 }}</p>
-                <p class="card-text"> R${{ product.value|truncatewords:20 }}</p>
+                <p class="card-text text-muted mb-2">{{ product.description|truncatewords:20 }}</p>
+                <p class="card-text text-success fw-bold">R$ {{ product.value }}</p>
             </div>
         </div>
     </div>
