--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,3 +1,9 @@
+<!-- CSS do Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- JavaScript do Bootstrap (Requerido para Dropdowns) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="{% url 'product_list' %}">
@@ -13,7 +19,7 @@
                     <a class="nav-link {% if not request.GET.category %}active{% endif %}" href="{% url 'product_list' %}">Todos os Produtos</a>
                 </li>
                 
-                {% for category in categories %}
+                {% for category in categories|slice:":4" %}
                 <li class="nav-item">
                     <a class="nav-link {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
                        href="{% url 'product_list' %}?category={{ category.id }}">
@@ -21,6 +27,24 @@
                     </a>
                 </li>
                 {% endfor %}
+                
+                {% if categories|length > 4 %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                        Mais Categorias
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
+                        {% for category in categories|slice:"4:" %}
+                        <li>
+                            <a class="dropdown-item {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
+                               href="{% url 'product_list' %}?category={{ category.id }}">
+                                {{ category.name }}
+                            </a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </li>
+                {% endif %}
             </ul>
             <form id="searchForm" class="d-flex search-form" action="{% url 'product_list' %}" method="get">
                 <input id="searchInput" class="form-control me-2" type="text" name="name" placeholder="Procurar" value="{{ request.GET.name }}">
