--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -7,7 +7,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="{% url 'product_list' %}">
-            <img src="/media/logo-remove.png" alt="logo_lufashion" class="logo-navbar">
+            <img src="/static/logo-remove.png" alt="logo_lufashion" class="logo-navbar">
         </a>        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
             <span class="navbar-toggler-icon"></span>
