--- a/catalog/templates/products_list.html
+++ b/catalog/templates/products_list.html
@@ -23,7 +23,7 @@
             <div class="card-body d-flex flex-column justify-content-between">
                 <h5 class="card-title">{{ product.name }}</h5>
                 <p class="card-text text-muted mb-2">{{ product.description|truncatewords:20 }}</p>
-                <p class="card-text text-success fw-bold">R$ {{ product.value }}</p>
+                <p class="card-text text-success fw-bold">R$ {{ product.value|floatformat:2 }}</p>
             </div>
         </div>
     </div>
