--- a/templates/components/_similar_products.html
+++ b/templates/components/_similar_products.html
@@ -6,7 +6,7 @@
                 <img src="{{ p.image.url }}" class="card-img-top rounded" alt="{{ p.name }}" style="max-height: 200px; object-fit: cover;">
                 <div class="card-body p-3 d-flex flex-column">
                     <h5 class="text-truncate">{{ p.name }}</h5>
-                    <h6 class="text-primary fw-bold">R${{ p.value }}</h6>
+                    <h6 class="text-primary fw-bold">R${{ p.value|floatformat:2 }}</h6>
                 </div>
             </a>
         </div>
