--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -2,11 +2,11 @@
 <footer class="bg-dark text-light py-4 mt-5">
     <div class="container text-center">
         <div class="row">
-            <div class="col-md-6 mb-3 mb-md-0">
+            <div class="col-12 col-md-6 mb-3 mb-md-0">
                 <h5>Lu Fashion</h5>
                 <p>Seu destino para moda elegante e acessível.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <h5>Redes Sociais</h5>
                 <ul class="list-unstyled d-flex justify-content-center">
                     <li class="mx-2">
@@ -19,17 +19,12 @@
                             <i class="bi bi-instagram"></i>
                         </a>
                     </li>
-                    <li class="mx-2">
-                        <a href="https://twitter.com" class="text-light">
-                            <i class="bi bi-twitter"></i>
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
         <hr class="bg-light">
         <div class="text-center">
-            <small>&copy; 2024 Lu Fashion. Todos os direitos reservados.</small>
+            <small>&copy; 2025 Lu Fashion. Todos os direitos reservados.</small>
         </div>
     </div>
 </footer>
