--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,5 +1,6 @@
 <!-- CSS do Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
 <!-- JavaScript do Bootstrap (Requerido para Dropdowns) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
@@ -13,46 +14,65 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link {% if not request.GET.category %}active{% endif %}" href="{% url 'product_list' %}">Todos os Produtos</a>
-                </li>
+        <div class="collapse navbar-collapse justify-content-between" id="navbarContent">
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link {% if not request.GET.category %}active{% endif %}" href="{% url 'product_list' %}">Todos os Produtos</a>
+                    </li>
+                    
+                    {% for category in categories|slice:":4" %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
+                           href="{% url 'product_list' %}?category={{ category.id }}">
+                            {{ category.name }}
+                        </a>
+                    </li>
+                    {% endfor %}
+                    
+                    {% if categories|length > 4 %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                            Mais Categorias
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
+                            {% for category in categories|slice:"4:" %}
+                            <li>
+                                <a class="dropdown-item {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
+                                   href="{% url 'product_list' %}?category={{ category.id }}">
+                                    {{ category.name }}
+                                </a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    {% endif %}
+                </ul>
                 
-                {% for category in categories|slice:":4" %}
-                <li class="nav-item">
-                    <a class="nav-link {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
-                       href="{% url 'product_list' %}?category={{ category.id }}">
-                        {{ category.name }}
-                    </a>
-                </li>
-                {% endfor %}
-                
-                {% if categories|length > 4 %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                        Mais Categorias
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
-                        {% for category in categories|slice:"4:" %}
-                        <li>
-                            <a class="dropdown-item {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
-                               href="{% url 'product_list' %}?category={{ category.id }}">
-                                {{ category.name }}
-                            </a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </li>
+                <form id="searchForm" class="d-flex search-form" action="{% url 'product_list' %}" method="get">
+                    <div class="input-group">
+                        <input id="searchInput" class="form-control" type="text" name="name" placeholder="Procurar" value="{{ request.GET.name }}">
+                        {% if request.GET.category %}
+                        <input type="hidden" name="category" value="{{ request.GET.category }}">
+                        {% endif %}
+                        <button class="btn btn-outline-light" type="submit">
+                            <i class="bi bi-search"></i>
+                        </button>
+                    </div>
+                </form>
+            {% endif %}
+
+            <div class="d-flex align-items-center">
+                {% if user.is_authenticated %}
+                    <!-- Botão de logout -->
+                    <form action="{% url 'logout' %}" method="post" class="d-inline">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-dark">
+                            <i class="bi bi-box-arrow-right text-white fs-4"></i>
+                        </button>
+                    </form>
                 {% endif %}
-            </ul>
-            <form id="searchForm" class="d-flex search-form" action="{% url 'product_list' %}" method="get">
-                <input id="searchInput" class="form-control me-2" type="text" name="name" placeholder="Procurar" value="{{ request.GET.name }}">
-                {% if request.GET.category %}
-                <input type="hidden" name="category" value="{{ request.GET.category }}">
-                {% endif %}
-                <button class="btn btn-outline-light" type="submit">Buscar</button>
-            </form>
+            </div>
         </div>
     </div>
 </nav>
