--- a/administrators/templates/category_list.html
+++ b/administrators/templates/category_list.html
@@ -15,7 +15,7 @@
             <tr>
                 <td>{{ category.name }}</td>
                 <td>
-                    <a href="{% url 'category_edit' category.id %}" class="btn btn-warning btn-sm">Editar</a>
+                    <a href="{% url 'category_update' category.id %}" class="btn btn-warning btn-sm">Editar</a>
                     <a href="{% url 'category_delete' category.id %}" class="btn btn-danger btn-sm">Excluir</a>
                 </td>
             </tr>
