--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,8 +1,5 @@
-<!-- CSS do Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-
-<!-- JavaScript do Bootstrap (Requerido para Dropdowns) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -15,60 +12,66 @@
         </button>
         
         <div class="collapse navbar-collapse justify-content-between" id="navbarContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link {% if not request.GET.category %}active{% endif %}" href="{% url 'product_list' %}">Todos os Produtos</a>
-                    </li>
-                    
-                    {% for category in categories|slice:":4" %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
-                           href="{% url 'product_list' %}?category={{ category.id }}">
-                            {{ category.name }}
-                        </a>
-                    </li>
-                    {% endfor %}
-                    
-                    {% if categories|length > 4 %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                            Mais Categorias
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
-                            {% for category in categories|slice:"4:" %}
-                            <li>
-                                <a class="dropdown-item {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
-                                   href="{% url 'product_list' %}?category={{ category.id }}">
-                                    {{ category.name }}
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-                    {% endif %}
-                </ul>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link {% if not request.GET.category %}active{% endif %}" href="{% url 'product_list' %}">Todos os Produtos</a>
+                </li>
                 
-                <form id="searchForm" class="d-flex search-form" action="{% url 'product_list' %}" method="get">
-                    <div class="input-group">
-                        <input id="searchInput" class="form-control" type="text" name="name" placeholder="Procurar" value="{{ request.GET.name }}">
-                        {% if request.GET.category %}
-                        <input type="hidden" name="category" value="{{ request.GET.category }}">
-                        {% endif %}
-                        <button class="btn btn-outline-light" type="submit">
-                            <i class="bi bi-search"></i>
-                        </button>
-                    </div>
-                </form>
-
-                <div class="d-flex align-items-center">
-                    {% if user.is_authenticated %}
-                        <form action="{% url 'logout' %}" method="post" class="d-inline">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-dark">
-                                <i class="bi bi-box-arrow-right text-white fs-4"></i>
-                            </button>
-                        </form>
+                {% for category in categories|slice:":4" %}
+                <li class="nav-item">
+                    <a class="nav-link {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
+                       href="{% url 'product_list' %}?category={{ category.id }}">
+                        {{ category.name }}
+                    </a>
+                </li>
+                {% endfor %}
+                
+                {% if categories|length > 4 %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                        Mais Categorias
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
+                        {% for category in categories|slice:"4:" %}
+                        <li>
+                            <a class="dropdown-item {% if request.GET.category == category.id|stringformat:'s' %}active{% endif %}" 
+                               href="{% url 'product_list' %}?category={{ category.id }}">
+                                {{ category.name }}
+                            </a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </li>
+                {% endif %}
+            </ul>
+            
+            <form id="searchForm" class="d-flex search-form" action="{% url 'product_list' %}" method="get">
+                <div class="input-group">
+                    <input id="searchInput" class="form-control" type="text" name="name" placeholder="Procurar" value="{{ request.GET.name }}">
+                    {% if request.GET.category %}
+                    <input type="hidden" name="category" value="{{ request.GET.category }}">
                     {% endif %}
+                    <button class="btn btn-outline-light" type="submit">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
+            </form>
+
+            <div class="d-flex align-items-center gap-2">
+                {% if user.is_authenticated %}
+                <a href="{% url 'admin-product_list' %}" class="btn btn-dark" title="Área administrativa">
+                    <i class="bi bi-speedometer2 text-white fs-4"></i>
+                </a>
+            
+                
+                <form action="{% url 'logout' %}" method="post" class="d-inline">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-dark">
+                        <i class="bi bi-box-arrow-right text-white fs-4"></i>
+                    </button>
+                </form>
+            {% endif %}
+            
             </div>
         </div>
     </div>
